@@ -15,7 +15,14 @@ libs << " -r console_app"
 libs << " -r console_sandbox" if options[:sandbox]
 libs << " -r console_with_helpers"
 
-ENV['RAILS_ENV'] = ARGV.first || ENV['RAILS_ENV'] || 'development'
+ENV['RAILS_ENV'] = case ARGV.first
+  when "p": "production"
+  when "d": "development"
+  when "t": "test"
+  else
+    ARGV.first || ENV['RAILS_ENV'] || 'development'
+end
+
 if options[:sandbox]
   puts "Loading #{ENV['RAILS_ENV']} environment in sandbox."
   puts "Any modifications you make will be rolled back on exit."
